seedbox/radarr/deployment.yml
# deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radarr
  namespace: seedbox
spec:
  selector:
    matchLabels:
      app: radarr
  template:
    metadata:
      labels:
        app: radarr
    spec:
      containers:
        - name: radarr
          image: lscr.io/linuxserver/radarr:5.15.1.9463-ls248 # {"$imagepolicy": "flux-system:radarr"}
          ports:
            - containerPort: 7878
              name: http
          volumeMounts:
            - mountPath: /config
              name: fast-nfs
            - mountPath: /slow-nfs
              name: slow-nfs
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 300m
              memory: 512Mi
      volumes:
        - name: fast-nfs
          persistentVolumeClaim:
            claimName: radarr
        - name: slow-nfs
          persistentVolumeClaim:
            claimName: slow-nfs
