seedbox/radarr/http-route.yml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: radarr
  namespace: seedbox
spec:
  hostnames:
    - "radarr.${env}.${domain}"
  parentRefs:
    - name: traefik
      namespace: traefik
      sectionName: internal-https
  rules:
    - backendRefs:
        - name: radarr
          port: 80
